--- a/css/style.css
+++ b/css/style.css
@@ -6,21 +6,21 @@
 @import "friends.css";
 @import "find.css";
 @import "more.css";
+@import "settings.css";
 
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@300,700;1,300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,700;1,300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');
-
-body{
-    background-color: white;
-    padding:10px 20px;
-    color: #020202;
+body {
+  background-color: white;
+  padding: 10px 20px;
+  color: #020202;
 }
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
