all lecture is added

--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -33,5 +33,20 @@
     align-items: center;
     border-radius: 50%;
     font-size: 10px;
+}
 
+@keyframes showNavBar{
+    from{
+        transform: translateY(80px);
+    }
+    to{
+        transform: none;
+    }
+}
+
+.nav{
+    /* transform을 해줘야 밑에서부터 올라옴  */
+    transform: translateY(80px);
+    animation: showNavBar 0.5s ease-out forwards;
+    animation-delay: 0.5s;
 }
