--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
 @import "find.css";
 @import "more.css";
 @import "settings.css";
+@import "chat.css";
+@import "mobile.css";
 
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@300,700;1,300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap");
@@ -23,4 +25,19 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+
+@keyframes fadeIn{
+  from{
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  to{
+    opacity: 1;
+    transform: none;
+  }
+}
+main{
+  animation: fadeIn 0.5s ease-in-out; 
 }
