--- a/css/chat.css
+++ b/css/chat.css
@@ -159,7 +159,7 @@ width:100%;
     
 }
 .incomming-message .message__author{
-    margin-top: 30px;
+    margin-top: 10px;
     display: block;
     font-weight: 600;
     font-size:12px;
@@ -217,4 +217,20 @@ width:100%;
         opacity: 1;
         transform: none;
     }
+}
+
+.message__timestamp{
+    font-family: 'Khand', sans-serif;
+    font-size: 20px;
+    opacity: 0.8;
+}
+
+.incomming-message .message__content{
+    display: flex;
+    align-items: center;
+
+}
+.incomming-message .message__content .message__timestamp{
+    margin-left: 10px;
+    margin-top: 3px;
 }
