--- a/css/friend.css
+++ b/css/friend.css
@@ -5,6 +5,7 @@
 }
 .friend .friend__avatar{
     width: 50px;
+    height: 50px;
     border-radius:  38%;
 
 }
@@ -13,17 +14,20 @@
 }
 .friend__avatar.m-avatar{
     width: 60px; 
+    height: 60px;
 }
 .friend .friend__column{
     display: flex;
     align-items: center;
+    margin-top: 10px;
 }
 .friend .friend__avatar{
-    margin-right: 15px;
+    margin-right: 25px;
 }
 .friend__content .friend__name{
     display: block;
     margin-bottom: 5px;
+    font-family: 'Teko', sans-serif;
 }
 .friend__content .friend__status,
 .friend__content .friend__bottom-text{
@@ -38,13 +42,14 @@
 .friend .chat__timestamp{
     font-size: 12px;
     opacity: 0.6;
+    margin-right: 10px;
 }
-.friend .friend__now-listening{
+ .friend .friend__now-listening{
    border: 1px solid #52e084;
     padding: 5px 10px;
     border-radius: 11px;
     font-size: 14px;
-}
+} 
 .friend__now-listening span{
     opacity: 0.7;
 }
@@ -53,10 +58,36 @@
 }
 
 .friend__add-btn{
-    padding: 10px 15px;
+     padding: 10px 15px; 
+     margin-bottom: 5px;
+     margin-right: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f5f5f5;
-    border-radius: 5px;
+    border-radius: 50%;
+     background-color: yellow; 
+
 }
+.friend__add-btn:hover{
+    box-shadow: 0 13px 27px -5px rgba(50,50,93,.25), 0 8px 16px -8px rgba(0,0,0,.3), 0 -6px 16px -6px rgba(0,0,0,.025);
+    
+}
+.friend--lg{
+  margin-bottom: 5px;
+  display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.friend--lg:hover{
+    background-color: #f5f5f5;
+    border-radius: 10px;
+    cursor: pointer;
+  
+}
+
+/* .friend:hover{
+    background-color: #f5f5f5;
+    border-radius: 10px;
+    cursor: pointer;
+} */
