--- a/css/friends.css
+++ b/css/friends.css
@@ -13,3 +13,14 @@
     opacity: 0.6;
     margin-bottom: 10px;
 }
+/* 
+.friends__plus__icon{
+    background-color: yellow;
+    width:50px;
+    height: 50px;
+    border-radius:  38%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 23px;
+} */
