--- a/css/more.css
+++ b/css/more.css
@@ -3,6 +3,7 @@
     margin-left: 10px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .more__btn-list .more__btn, .more .more__suggestion{
