--- a/css/status-bar.css
+++ b/css/status-bar.css
@@ -2,13 +2,13 @@
     display: flex;
     justify-content:space-between;
     margin-bottom:30px;
-    font-family: 'Open Sans Condensed';
-    opacity: 0.7;
+    font-family: 'Abel', sans-serif;
+    opacity: 0.8;
 }
 
 .status-bar i{
     font-size: 14;
 }
-.status-bar .status-bar__battery-level{
+/* .status-bar .status-bar__battery-level{
     margin-left: 7px;
-}
+} */
