--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,12 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@300,700;1,300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Abel&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Teko&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Khand:wght@300&display=swap");
+
+
 
 body {
   background-color: white;
